Fix layout bug

--- a/uliweb_layout/layout/static/layout.css
+++ b/uliweb_layout/layout/static/layout.css
@@ -1,5 +1,6 @@
-.content-wrapper {position:relative;padding:15px;}
+#layout-body .content-wrapper {position:relative;border-left:none;padding-bottom: 1px;}
 .main-footer {background-color: #3c8dbc; color: #e0e0e0;margin-left:0}
 .main-sidebar, .left-side {padding-top:0;margin-left:-230px;}
 .content {background-color:white;}
-.content-header {padding:15px;margin-top:-15px;margin-left:-15px;}
+#layout-body {font-size: 14px; font-family: "微软雅黑";}
+.content {margin:15px;}
